[workspace]
members = ["common", "day01", "day02", "day03", "day04", "day05", "day06", "day07"]

[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
common = { path = "./common" }
itertools = "0.10.0"
maplit = "1.0"
lazy_static = "1.4"

[[bin]]
name = "default"
path = "day06/src/main.rs"