[workspace]
members = ["common", "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11"]

[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
common = { path = "./common" }
itertools = "0.10.0"
maplit = "1.0"
lazy_static = "1.4"
atoi = "2"
prettytable = "0.10.0"

[[bin]]
name = "default"
path = "day11/src/main.rs"
